--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "junit-to-slack-reporter"
+name = "reportly"
 version = "0.1.0"
 edition = "2021"
+authors = ["Andrea Di Lisio <andrea.dilisio91@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
