--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ inputs:
   test-results-dir:
     description: 'Directory that contains raw test results'
     required: true
-    default: '/usr/src/reportly/test-reports/**/*.xml'
+    default: '/reportly/test-reports/**/*.xml'
 outputs:
   report:
     description: 'A useful report'
