--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,7 @@ jobs:
       - uses: ./ # Uses an action in the root directory
         id: reportly
       - name: Get the output
-        run: echo "report:\n ${{ steps.reportly.outputs.report }}"
+        run: |
+          cat << EOF
+          $steps.reportly.outputs.report
+          EOF
