--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,4 @@ jobs:
         id: reportly
       - name: Get the output
         run: |
-          cat << EOF
-          ${{steps.reportly.outputs.report}}
-          EOF
+          cat ${{steps.reportly.outputs.report}}
