--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,5 @@ jobs:
       - uses: ./ # Uses an action in the root directory
         id: generate_report
       - name: Get the output
-        run: echo "The generated report is: ${{ steps.generate_report.outputs.report }}"
+        run: |
+          echo "The generated report is: ${{ steps.generate_report.outputs.report }}"
