--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,19 @@
 on: [push]
 
 jobs:
-  hello_world_job:
+  create_slack_report:
     runs-on: ubuntu-latest
-    name: A test
     steps:
-      # To use this repository's private action,
-      # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v4
       - uses: ./ # Uses an action in the root directory
         id: generate_report
-      - name: Get the output
-        run: |
-          echo "The generated report is: ${{ steps.generate_report.outputs.report }}"
+      - name: Send custom JSON data to Slack workflow
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+          # For posting a rich message using Block Kit
+          payload: |
+            ${{steps.generate_report.outputs.report}}
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
