--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,10 @@
 name: 'Reportly'
 description: 'Turn test results into useful reports'
 inputs:
+  report_title:
+    descritpion: 'The report title'
+    required: true
+    default: "My simple test report"
   test_results_pattern:
     description: 'Directory that contains raw test results'
     required: true
@@ -13,4 +17,5 @@ runs:
   image: 'Dockerfile'
   entrypoint: /reportly/entrypoint.sh
   args:
+    - ${{ inputs.report_title }}
     - "/reportly/${{ inputs.test_results_pattern }}"
