--- a/.github/workflows/test_junit_reports.yml
+++ b/.github/workflows/test_junit_reports.yml
@@ -10,6 +10,7 @@ jobs:
         name: Create Slack report from Junit results
         id: generate_slack_report
         with:
+          title: "My cool test report"
           test_reports_pattern: "./test-reports/**/*.xml"
       - name: Send default test report
         uses: slackapi/slack-github-action@v1.26.0
