--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
         name: Create Slack report from Junit results
         id: generate_slack_report
         with:
-          include_skipped_tests: true
+          include_skipped: true
           test_reports_pattern: "./test-reports/**/*.xml"
       - name: Send default test report
         uses: slackapi/slack-github-action@v1.26.0
