--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ inputs:
   title:
     description: 'The report title'
     required: true
-    default: "${{env.GITHUB_REPOSITORY}} test report"
+    default: "${{ github.repository }} test report"
   test_reports_pattern:
     description: 'Directory that contains raw test results'
     required: true
