--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,6 @@ runs:
   entrypoint: /reportly/entrypoint.sh
   args:
     - "--report_title=${{ inputs.title }}"
-    - "--test_reports_pattern=/reportly/${{ inputs.test_reports_pattern }}"
-    - "--include_skipped=${{ inputs.include_skipped}}"
-    - "--include_passed=${{ inputs.include_passed}}"
+    - "--test-reports-pattern=/reportly/${{ inputs.test_reports_pattern }}"
+    - "--include-skipped=${{ inputs.include_skipped}}"
+    - "--include-passed=${{ inputs.include_passed}}"
