--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ glob = "0.3.1"
 roxmltree = "0.19.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.116"
+
+[dev-dependencies]
+indoc = "2.0.5"
