--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.116"
 
 [dev-dependencies]
+assert_json = "0.1.0"
 indoc = "2.0.5"
 test-case = "3.3.1"
