--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 name: 'TestVox - Turn test results into human readable reports'
 description: 'Turn test results into human readable reports'
-author: "Andrea Di Lisio"
+author: "Andrea Di Lisio <andrea.dilisio91@gmail.com>"
+branding:
+  icon: 'check-circle'
+  color: 'green'
 inputs:
   title:
     description: 'The report title'
