--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,9 @@ repository = "https://github.com/dili91/testvox"
 readme = "README.md"
 keywords = ["continuous-integration", "ci", "testing"]
 license-file = "LICENSE"
-exclude = [
-    ".github/*",
-    "images/*",
-    "action.yml",
-    "Dockerfile",
-    "entrypoint.sh",
-    "justfile"
+include = [
+    "**/*.rs",
+    "Cargo.toml",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
