--- a/.github/workflows/acceptance_tests.yml
+++ b/.github/workflows/acceptance_tests.yml
@@ -11,7 +11,7 @@ jobs:
         id: generate_slack_report
         with:
           include_skipped: true
-          reports_pattern: "./test-results/**/*.xml"
+          reports_pattern: "./test-data/*.xml"
       - name: Send Slack report
         uses: slackapi/slack-github-action@v1.26.0
         with:
