--- a/.github/workflows/workflow-branch.yml
+++ b/.github/workflows/workflow-branch.yml
@@ -12,27 +12,15 @@ jobs:
     uses: ./.github/workflows/build-format-test.yml
     with:
       checkout_ref: ${{ github.ref }}
-  publish-crate-test:
+  check-crate-version-available:
     # needs: build-test-coverage
     runs-on: ubuntu-latest
     steps:
       - name: Install Just
         run: sudo snap install --edge --classic just
       - uses: actions/checkout@v4
-      # - name: test
-      #   run: |
-      #     version=0.1.0
-      #     response=$(curl -s -o /dev/null -w "%{http_code}" https://crates.io/api/v1/crates/testvox/{{version}})
-      #     if [[ $response == 2* ]]; then
-      #         echo "Version {{version}} is already published on crates.io"
-      #         exit 1
-      #     fi
-      - name: Check if version 1.0.0 version is available
+      - name: Get current project version from Cargo.toml
+        run: echo "CRATE_VERSION=$(cargo metadata --format-version=1 --no-deps | jq -r '.packages[0].version'" >> $GITHUB_ENV
+      - name: Check if crate version is available
         shell: bash
-        run: just check-crate-version-available 1.0.0
-      - name: Check if version 0.1.0 version is available
-        shell: bash
-        run: just check-crate-version-available 0.1.0
-      - name: Check if version 0.1.1 version is available
-        shell: bash
-        run: just check-crate-version-available 0.1.1
+        run: just check-crate-version-available $CRATE_VERSION
