--- a/.github/workflows/workflow-branch.yml
+++ b/.github/workflows/workflow-branch.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: actions/checkout@v4
       - name: Get current project version from Cargo.toml
-        run: echo "CRATE_VERSION=$(cargo metadata --format-version=1 --no-deps | jq -r '.packages[0].version'" >> $GITHUB_ENV
+        run: echo "CRATE_VERSION=$(cargo metadata --format-version=1 --no-deps | jq -r '.packages[0].version')" >> $GITHUB_ENV
       - name: Check if crate version is available
         shell: bash
         run: just check-crate-version-available $CRATE_VERSION
