--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   tests:
-    name: Acceptance Tests
+    name: End to end tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
