--- a/.github/workflows/workflow-branch.yml
+++ b/.github/workflows/workflow-branch.yml
@@ -12,14 +12,7 @@ jobs:
     uses: ./.github/workflows/build-format-test.yml
     with:
       checkout_ref: ${{ github.ref }}
-  check-crate-version-available:
-    # needs: build-test-coverage
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install Just
-        run: sudo snap install --edge --classic just
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: actions/checkout@v4
-      - name: Check if crate version is available
-        shell: bash
-        run: just check-crate-version-available
+  check-crate-version-availability:
+    uses: ./.github/workflows/check-crate-version-availability.yml
+    with:
+      checkout_ref: ${{ github.ref }}
