--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.checkout_ref }}
-      - uses: dili91/testvox@${{ inputs.checkout_ref }}
+      - uses: "dili91/testvox@${{ inputs.checkout_ref }}"
         name: Generate Slack report from Junit results
         id: generate_slack_report
         with:
