--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.checkout_ref }}
+        # with:
+        #   ref: ${{ inputs.checkout_ref }}
       - uses: "dili91/testvox@${{ inputs.checkout_ref }}"
         name: Generate Slack report from Junit results
         id: generate_slack_report
