--- a/.github/workflows/workflow-branch.yml
+++ b/.github/workflows/workflow-branch.yml
@@ -1,4 +1,4 @@
-name: Workflow branch
+name: Workflow on branch, excluding main
 
 on:
   push:
@@ -16,9 +16,3 @@ jobs:
     uses: ./.github/workflows/check-crate-version-availability.yml
     with:
       checkout_ref: ${{ github.ref }}
-  e2e-tests:
-    uses: ./.github/workflows/e2e-tests.yml
-    with:
-      checkout_ref: ${{ github.ref }}
-    secrets:
-      slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL}}
