--- a/.github/workflows/workflow-branch.yml
+++ b/.github/workflows/workflow-branch.yml
@@ -24,6 +24,6 @@ jobs:
         run: sudo snap install --edge --classic just
       - uses: actions/checkout@v4
       - name: "publishing..."
-        command: |
+        run: |
           crate_version=$(just get-project-version)
           echo "I'm publishing version $crate_version"
