--- a/.github/workflows/workflow-main.yml
+++ b/.github/workflows/workflow-main.yml
@@ -8,15 +8,15 @@ on:
       - '**'
 
 jobs:
-  build-lint-test:
+  build_lint_test:
     uses: ./.github/workflows/build-lint-test.yml
     with:
       checkout_ref: ${{ github.ref }}
-  check-crate-version-availability:
+  check_crate_version_availability:
     uses: ./.github/workflows/check-crate-version-availability.yml
     with:
       checkout_ref: ${{ github.ref }}
-  e2e-tests:
+  e2e_tests:
     uses: ./.github/workflows/e2e-tests.yml
     with:
       checkout_ref: ${{ github.ref }}
