--- a/.github/workflows/workflow-branch.yml
+++ b/.github/workflows/workflow-branch.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           crate_version=$(just get-project-version)
           echo "VERSION=$crate_version" >> $GITHUB_OUTPUT
+      # TODO: remove
       - name: "Publishing..."
         run: echo ${{ steps.get_project_version.outputs.VERSION }}
       - name: Log in to Docker Hub
@@ -49,6 +50,6 @@ jobs:
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
-          subject-name: index.docker.io/adilisio/testvox:${{ steps.get_project_version.outputs.VERSION }}
+          subject-name: index.docker.io/testvox:${{ steps.get_project_version.outputs.VERSION }}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
